# lid_driven_cavity_problem

./: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  environment.devenv.yml  environment.yml  readme.md  setup.py  tasks.py
c++/: CMakeLists.txt  _petsc_helpers.cpp  _residual_function.cpp  makefile  petsc_solver_helpers.cpp  petsc_solver_helpers.hpp  residual_function.cpp  residual_function_omp.cpp
cmake/: FindPETSc.cmake
cython_/: residual_function.pyx
eval_petsc/: eval_petsc.py
experiments/: benchmarks.py  petsc4py_experiments.py  run_solver.py  test_petsc4py.py  validation.py
experiments/ghia_ghia_shin_results/: U.txt  V.txt  pos.txt
experiments/ghia_ghia_shin_results/re_10/: U.txt  V.txt
lid_driven_cavity_problem/: _refactoring_options.py  newton_solver.py  options.py  residual_function.py  staggered_grid.py  time_stepper.py
lid_driven_cavity_problem/_tests/: test_run_solver.py
lid_driven_cavity_problem/experiments/: petsc4py_experiments.py
lid_driven_cavity_problem/nonlinear_solver/: _common.py  _utils.py  exceptions.py  petsc_solver_wrapper.py  scipy_solver_wrapper.py  solver_builder.py
lid_driven_cavity_problem/residual_function/: cpp_omp_residual_function.py  cpp_residual_function.py  cython_residual_function.py  numba_residual_function.py  numpy_residual_function.py  pure_python_residual_function.py
tests/: test_calculate_jacobian_mask.py  test_residual_function.py  test_run_solver.py
tests/test_calculate_jacobian_mask/: J_2_4_3.txt  J_4_2_3.txt  J_4_4_3.txt  J_4_5_3.txt  J_5_4_3.txt  J_5_5_1.txt
tests/test_run_solver/: U.txt  V.txt
